<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/streamcamp_logo" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/streamcamp_logo_text" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_subtitle"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30sp"
                    android:text="@string/sign_up_for_streamcamp"
                    android:textAlignment="center"
                    android:textColor="@android:color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/layout_round_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    android:id="@+id/flLoginPhoneEmail"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:id="@+id/ivEmail"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        app:srcCompat="@drawable/account_login" />

                    <TextView
                        android:id="@+id/editSignUpwithGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/email_login_button_text"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/continue_with_fb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/layout_round_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:id="@+id/ivFB"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        app:srcCompat="@drawable/fb_icons" />

                    <TextView
                        android:id="@+id/editWithFB"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/continue_with_facebook"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/layout_round_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="10dp"
                    tools:ignore="TouchTargetSizeCheck">

                    <ImageView
                        android:id="@+id/ivGoogle"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        app:srcCompat="@drawable/google_icon" />

                    <TextView
                        android:id="@+id/editWithGoogle"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/continue_with_google"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:ignore="RtlCompat" />
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/editTermsandconditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:text="@string/terms_and_conditions_sign_up"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/editLogIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:text="@string/log_in"
                        android:textColor="@color/orange"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>